--- a/src/Components/Payment.css
+++ b/src/Components/Payment.css
@@ -1,4 +1,4 @@
-.payment h2{
+/* .payment h2{
     background-color: rgb(234,237,237);
     padding: 10px;
     font-weight: 400;
@@ -23,4 +23,4 @@
 
 .payment__address,.payment__items{
     flex:0.7
-}
+} */
